JVM target set consistently to 11 in all modules. Gradle updated to 7.6.